--- a/arborist/src/style.css
+++ b/arborist/src/style.css
@@ -42,6 +42,7 @@ h1 {
 
 body {
   background: #f5f5f5;
+  padding-bottom: 3in;
 }
 
 #app {
@@ -51,7 +52,7 @@ body {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #213547;    
     background-color: #ffffff;
   }
 
