--- a/arborist/src/style.css
+++ b/arborist/src/style.css
@@ -64,6 +64,10 @@ body {
   display: flex;
 }
 
+.d-grid {
+  display: grid;
+}
+
 .align-center {
   align-content: center;
 }
@@ -82,6 +86,10 @@ body {
 
 .justify-space-between {
   justify-content: space-between;
+}
+
+.justify-space-around {
+  justify-content: space-around;
 }
 
 .gap-1 {
