--- a/arborist/src/style.css
+++ b/arborist/src/style.css
@@ -66,6 +66,9 @@ body {
 
 .d-grid {
   display: grid;
+  min-height:0;
+  min-width:0;
+  overflow:hidden;
 }
 
 .justify-content-space-between {
@@ -73,7 +76,7 @@ body {
 }
 
 .grid-columns-3 {
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, minmax(100px, 1fr));
 }
 
 .column-span-3 {
