Adjust tree layout and node sizing

--- a/arborist/src/style.css
+++ b/arborist/src/style.css
@@ -66,9 +66,9 @@ body {
 
 .d-grid {
   display: grid;
-  min-height:0;
-  min-width:0;
-  overflow:hidden;
+  min-height: 0;
+  min-width: 0;
+  overflow: hidden;
 }
 
 .justify-content-space-between {
@@ -113,6 +113,10 @@ body {
 
 .flex-nowrap {
   flex-wrap: nowrap;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .justify-center {
