Played with a dark-mode. May revisit later

--- a/arborist/src/style.css
+++ b/arborist/src/style.css
@@ -1,4 +1,7 @@
-:root {
+:root {  
+  &.dark-mode{
+    filter: saturate(2) invert(1);
+  }
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
